[package]
name = "xrfq3"
version = "1.0.0"
edition = "2021"
[lib]
doctest = false

[dependencies]
serde = { version = "1.0.227", features = ["derive"] }
serde-aux = "4.7.0"

secrecy = { version = "0.10.3", features = ["serde"] }

tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.10"

config = "0.15.19"

anyhow = "1.0.100"

thiserror = "2.0.17"

tracing = "0.1.41"

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "full"] }

uuid = { version = "1.18.1", features = ["v4", "v7", "v8"] }

chrono = { version = "0.4.42", features = ["serde"] }

rust_decimal = { version = "1.39.0", features = ["macros"] }

cassandra-cpp = "3.0.2"

redis = { version = "1.0.0-rc.3", features = ["tokio-comp", "connection-manager"] }

sha3 = "0.11.0-rc.3"
bytes = "1.11.0"

prost = { version = "0.14.1" }
prost-types = "0.14.1"
tonic-prost = "0.14.2"
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
serde_json = "1.0.145"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls", # tells sqlx to use the tokio runtime for its futures and rustls as TLS backend
    "macros", # “gives us access to sqlx::query! and sqlx::query_as!”
    "postgres", # unlocks Postgres-specific functionality (e.g.non-standard SQL types)
    "chrono", # “adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate”
    "migrate", # “gives us access to the same functions used under the hood by sqlx-cli to manage migrations”
    "tls-rustls",
    "rust_decimal",
    "json"
]

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["redis"] }
